# HDTwinGen_GIST

./: DESIGN_MULTI_FEATURE_MODEL.md  DigitalTwin_GIST_CBIO.ipynb  EXPLICACAO_FEATURES.md  SUMMARY_CHANGES.md  agents.py  causal_model_hybrid_CBio_longitudinal_v2.dot  compare_datasets.py  digitaltwintest.ipynb  dowhy.md  envs.py  executor.py  grafo3.dot  grafo_nnovo.dot  llm_utils.py  load_trained_model.py  main.py  pyproject.toml  run.py  test_cbio_integration.py  zzzzlucas.txt
HDTwinGen_treinado/: best_model_Dataset-CBIO_seed42.pt  best_model_Dataset-CBIO_seed42.py  best_model_Dataset-CBIO_seed42_metadata.json
config/: cbio_config.yaml  cbio_config_anti_overfit.yaml  cbio_config_best_quality.yaml  cbio_config_fast.yaml  cbio_config_quick.yaml  cbio_config_recommended.yaml  cbio_config_with_treatment_validation.yaml  cbio_digital_twin.yaml  config.yaml
inferencia/: analise.ipynb  inferir.py  synthetic_dataset.csv  synthetic_dataset_novo_2.csv
logs/: run-20251011-121545_NSDT_Cancer-untreated-Cancer-chemo-Cancer-Dataset-3DLV-Dataset-HL-Dataset-CBIO-COVID_10_10-runs_log_MAIN_TABLE.txt  run-20251011-121812_NSDT_Cancer-untreated-Cancer-chemo-Cancer-Dataset-3DLV-Dataset-HL-Dataset-CBIO-COVID_10_10-runs_log_MAIN_TABLE.txt  run-20251011-121902_NSDT_Cancer-untreated-Cancer-chemo-Cancer-Dataset-3DLV-Dataset-HL-Dataset-CBIO-COVID_10_10-runs_log_MAIN_TABLE.txt  run-20251011-122214_NSDT_Dataset-CBIO_10_10-runs_log_MAIN_TABLE.txt  run-20251011-122436_NSDT_Dataset-CBIO_10_10-runs_log_MAIN_TABLE.txt  run-20251011-122439_NSDT_Dataset-CBIO_10_10-runs_log_MAIN_TABLE.txt  (+53 more)
(+376 files in other folders)
