[project]
name = "hdtwingen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deap>=1.4.3",
    "gym==0.23.1",
    "hydra-core>=1.3.2",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "openai==0.27.8",
    "openml>=0.15.1",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "pygount>=3.1.0",
    "pysindy>=2.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sympy2jax>=0.0.7",
    "tiktoken>=0.12.0",
    "timeout-decorator>=0.5.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]
